<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TuneTrends</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_menu_screen">MenuScreen</string>
    <string name="title_activity_register">Register</string>
    <string name="emailHint">email</string>
    <string name="appTitleTxt">Tune Trends</string>
    <string name="registerBtnTxt">Register</string>
    <string name="submitBtnTxt">Log In</string>
    <string name="passwordHint">Password</string>
    <string name="title_activity_add_song">AddSong</string>
    <string name="emailPlaceholder">Email/Username</string>
    <string name="fNamePlaceholder">First Name</string>
    <string name="lNamePlaceholder">Last Name</string>
    <string name="songTitleTxt">Song Title</string>
    <string name="artistNameTxt">Artist Name</string>
    <string name="addSongTxt">Add Song</string>
    <string name="title_activity_update_rating">UpdateRating</string>
    <string name="LogIn">Log In</string>

</resources>
