<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register"
    android:background="@drawable/back">

    <EditText
        android:id="@+id/fName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fNamePlaceholder"
        android:inputType="textPersonName"
        android:textColorHint="#eefbff"
        android:textColor="#eefbff">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/lName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lNamePlaceholder"
        android:inputType="textPersonName"
        android:textColorHint="#eefbff"
        android:textColor="#eefbff" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailPlaceholder"
        android:inputType="textEmailAddress"
        android:textColorHint="#eefbff"
        android:textColor="#eefbff" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColorHint="#eefbff"
        android:textColor="#eefbff" />

    <Button
        android:id="@+id/registerUserBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerBtnTxt"
        android:textColor="#eefbff" />
</LinearLayout>
