<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:clickable="true"
    android:background="@drawable/backtransbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">


        <TextView
            android:id="@+id/ratingValueTxt"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/LogIn"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff1f2c"
            android:background="@android:color/holo_green_light"
            android:layout_gravity="center_horizontal"
            android:autoText="false"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:text="@string/submitBtnTxt"
            android:background="@android:drawable/bottom_bar"
            android:clickable="false"
            android:layout_marginRight="5dp" />

        <Button
            android:id="@+id/registerBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerBtnTxt"
            android:background="@android:drawable/bottom_bar"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

</LinearLayout>
