<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="25dp"
    tools:context=".AddSong"
    android:background="@drawable/back"
    android:weightSum="1"
    android:baselineAligned="false">


    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/songTitleTxt"
        android:textColorHint="#eefbff"
        android:textColor="#eeeeff">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/artistNameTxt"
        android:textColorHint="#eefbff"
        android:textColor="#eeeeff" />

    <Button
        android:id="@+id/addSong"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addSongTxt"
        android:layout_gravity="center_horizontal"
        android:textColor="#eeeeff" />
</LinearLayout>
